--- a/views_login/Login.ejs
+++ b/views_login/Login.ejs
@@ -8,22 +8,16 @@
 <form method = "POST">
     <div>Login</div>
     <div>
-        <label for = "id"> Employee Number: </label>
+        <label for = "id"> ID: </label>
         <input type = "text" name = "id" placeholder = "ID">
     </div>
     <div>
         <label for = "pwd"> Password: </label>
-        <input type = "password" name = "pwd" placeholder = "Password">
+        <input type = "password" name = "pw" placeholder = "Password">
     </div>
     <button type = "submit" name="button" value="Login"> Login </button>
     <button type = "submit" name="button" value="Register"> Register User </button>
 <br><br>
-    <div>Check your order</div>
-    <div>
-        <label for = "ordernumber"> Order Number: </label>
-        <input type = "text" name = "ordernumber" placeholder = "Order Number">
-    </div>
-    <button type = "submit" name="button" value="Check"> Check Order </button>
 </form>
 </body>
 </html>
